Update to retrieve and return full FileUpload objects
