# openapi.yaml
@@ -42,6 +42,57 @@ components:
       - storage_alias
       title: CreateUploadBoxRequest
       type: object
+    FileUpload:
+      description: A File Upload.
+      properties:
+        alias:
+          description: The submitted alias from the metadata (unique within the box)
+          title: Alias
+          type: string
+        checksum:
+          description: Unencrypted checksum
+          title: Checksum
+          type: string
+        completed:
+          default: false
+          description: Whether or not the file upload has finished
+          title: Completed
+          type: boolean
+        size:
+          description: File size in bytes
+          title: Size
+          type: integer
+        state:
+          $ref: '#/components/schemas/FileUploadState'
+          default: init
+          description: The state of the FileUpload
+        upload_id:
+          description: Unique identifier for the file upload
+          format: uuid4
+          title: Upload Id
+          type: string
+      required:
+      - upload_id
+      - alias
+      - checksum
+      - size
+      title: FileUpload
+      type: object
+    FileUploadState:
+      description: 'The allowed states for a ResearchDataUploadBox instance.
+
+
+        init: file upload initiated, but not yet finished
+
+        inbox: file upload complete, file in inbox
+
+        archived: file moved out of inbox after completion'
+      enum:
+      - init
+      - inbox
+      - archived
+      title: FileUploadState
+      type: string
     GrantAccessRequest:
       description: Request model for granting upload access to a user.
       properties:
@@ -289,7 +340,7 @@ info:
   description: A service providing a web-accessible management and auth layer over
     upload-path file services.
   title: Upload Orchestration Service
-  version: 1.0.0
+  version: 2.0.0
 openapi: 3.1.0
 paths:
   /access-grants:
@@ -582,8 +633,7 @@ paths:
             application/json:
               schema:
                 items:
-                  format: uuid4
-                  type: string
+                  $ref: '#/components/schemas/FileUpload'
                 title: Response 200 List Upload Box Files Boxes  Box Id  Uploads Get
                 type: array
           description: File IDs successfully retrieved.
